<resources>
    <string name="app_name">Devstree-Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_no_place_available_nlets_start_by_adding_few_places">No place available\nLets start by adding few places</string>
    <string name="lbl_add_poi">Add POI</string>
    <string name="lbl_primary">Primary</string>
    <string name="cd_show_direction">show direction</string>
    <string name="lbl_do_you_want_to_save">Do you want to save this selected location ?</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_update">Update</string>
    <string name="sort_by">Sort By</string>
    <string name="lbl_sort_ascending_order">Sort distance in ascending order</string>
    <string name="lbl_sort_descending_order">Sort distance in descending order</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_delete_saved_place">Delete Saved Place</string>
    <string name="msg_delete">Are you sure you want to delete this place from your saved list ?</string>
    <string name="lbl_ok">ok</string>
    <string name="lbl_cancel">cancel</string>
    <string name="msg_primary_delete">You can\'t delete primary location</string>
</resources>